tests/paczka1/fuzzy1/16074017.err
Error in line 16: JJDzRBMjWV A454 120,1
Error in line 33: xmDgKi4T A454 22,0
